# mmul-harness-instructional

./: .gitignore  CMakeLists.txt  README.md  benchmark.cpp  dgemm-basic.cpp  dgemm-blocked.cpp  job.in  plot_mmul.py
